fix table column misalignment

--- a/app/containers/ScandlinesPage/style.scss
+++ b/app/containers/ScandlinesPage/style.scss
@@ -29,4 +29,12 @@
     color: black;
     margin-left: 0.4em;
   }
+
+
+  .ReactTable .rt-tbody {
+    overflow-y: scroll;
+  }
+  .ReactTable .rt-thead  {
+    overflow-y: scroll;
+  }
 }
